--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -2,3 +2,5 @@
 =                   Colors                    =
 =============================================*/
 
+$black: rgba(16, 16, 32, 1.0);
+$white: rgba(222, 222, 232, 1.0);
