--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -8,3 +8,10 @@
     font-family: 'helvetica neue', sans-serif;
     font-weight: 400;
 }
+
+h2 {
+    color: $white;
+    font-size: 1.6rem;
+}
+
+i {color: $white}
