--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,41 @@
 @import "colors";
 @import "typography";
 
+#open {
+    position: fixed;
+    padding: 10px;
+    font-size: 2rem;
+    color: $black;
+    cursor: pointer;
+    &:hover {
+        opacity: 0.7;
+    }
+}
 
+#menu {
+    height: 100vh;
+    width: 300px;
+    padding: 8px 20px;
+    background-color: $black;
+    position: fixed;
+    overflow: hidden;
+    transition: all ease-in-out 0.9;
+}
+
+#close {
+    opacity: 0.7;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    &:hover {
+        opacity: 1;
+    }
+}
+
+.hide {
+    margin-left: -300px;
+}
 
 
 @import "media-queries";
