--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -2,5 +2,9 @@
 =                   Colors                    =
 =============================================*/
 
-$black: rgba(16, 16, 32, 1.0);
-$white: rgba(222, 222, 232, 1.0);
+$menu-back: rgba(36, 49, 56, 1.0);
+$menu-select: rgba(55, 73, 83, 1.0);
+$menu-icon: rgba(98, 109, 130, 1.0);
+$back: rgba(233, 233, 233, 1.0);
+$border: rgba(213, 213, 213, 1.0);
+$white: rgba(242, 242, 242, 1.0);
