--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,8 @@ strong {
   background-color: #243138;
   position: fixed;
   overflow: hidden;
-  transition: .4s ease-in-out; }
+  transition: .4s ease-in-out;
+  z-index: 10; }
   .menu h2 {
     padding: 10px; }
 
@@ -129,22 +130,6 @@ li {
   .active i {
     color: #f2f2f2; }
 
-main {
-  height: 100vh;
-  width: 100vw;
-  background-color: #e9e9e9; }
-
-article {
-  width: 760px;
-  position: absolute;
-  top: 50px;
-  left: 50%;
-  margin-left: -380px;
-  padding: 30px;
-  background-color: #f2f2f2;
-  border: 2px solid #d5d5d5;
-  border-radius: 6px; }
-
 /* The switch - the box around the slider */
 .switch {
   position: relative;
@@ -180,10 +165,7 @@ article {
   transition: .4s; }
 
 input:checked + .slider {
-  background-color: #3bb16b; }
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #3bb16b; }
+  background-color: #67bf95; }
 
 input:checked + .slider:before {
   -webkit-transform: translateX(17px);
@@ -196,5 +178,55 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%; }
+
+.btn {
+  border: none;
+  background: none;
+  margin: 6px;
+  color: #0b0b0b;
+  font-size: 1rem;
+  border-radius: 6px;
+  padding: 0.6em 1em;
+  transition: all 0.2s ease; }
+  .btn:active {
+    transform: scale(0.98); }
+
+.btn-outline {
+  color: #67bf95;
+  border: 2px solid #0b0b0b;
+  padding: 0.52em 1.1em; }
+  .btn-outline:hover {
+    background-color: #67bf95;
+    color: #f2f2f2; }
+
+.btn-round {
+  border-radius: 50px; }
+
+.btn-sm {
+  font-size: 0.707em; }
+
+.bg-brand {
+  background-color: #67bf95; }
+  .bg-brand:hover {
+    background-color: #55b788; }
+
+.bg-alt {
+  background-color: #0b0b0b; }
+  .bg-alt:hover {
+    background-color: black; }
+
+main {
+  height: 100vh;
+  width: 100vw;
+  background-color: #e9e9e9;
+  padding: 60px 30px; }
+
+article {
+  max-width: 760px;
+  margin: 0 auto;
+  padding: 30px;
+  background-color: #f2f2f2;
+  border: 2px solid #d5d5d5;
+  border-radius: 6px; }
 
 /*----------  Break Point 1 - 1200px  ----------*/
