--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -8,3 +8,5 @@ $menu-icon: rgba(98, 109, 130, 1.0);
 $back: rgba(233, 233, 233, 1.0);
 $border: rgba(213, 213, 213, 1.0);
 $white: rgba(242, 242, 242, 1.0);
+$black: rgba(11, 11, 11, 1.0);
+$brand: rgba(103, 191, 149, 1.0);
