--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,83 +8,23 @@
 @import "colors";
 @import "typography";
 @import "menu";
+@import "toggle";
+@import "buttons";
 
 main {
     height: 100vh;
     width: 100vw;
     background-color: $back;
+    padding: 60px 30px;
 }
 
 article {
-    width: 760px;
-    position: absolute;
-    top: 50px;
-    left: 50%;
-    margin-left: -380px;
+    max-width: 760px;
+    margin: 0 auto;
     padding: 30px;
     background-color: $white;
     border: 2px solid $border;
     border-radius: 6px;
-}
-
-
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 40px;
-  height: 22px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {display:none;}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 17px;
-  width: 17px;
-  left: 3px;
-  bottom: 3px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: rgba(59, 177, 107, 1.0);
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px rgba(59, 177, 107, 1.0);
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(17px);
-  -ms-transform: translateX(17px);
-  transform: translateX(17px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 17px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
 }
 
 
