--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ ul {
   margin: 30px 0; }
 
 li {
-  padding: 14px 18px;
+  padding: 6px 18px 18px;
   border-bottom: 1px solid #374953;
   cursor: pointer; }
   li i {
@@ -226,7 +226,7 @@ article {
   margin: 0 auto;
   padding: 30px;
   background-color: #f2f2f2;
-  border: 2px solid #d5d5d5;
-  border-radius: 6px; }
+  border: 1px solid #d5d5d5;
+  border-radius: 4px; }
 
 /*----------  Break Point 1 - 1200px  ----------*/
