--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -38,7 +38,7 @@ ul {
 }
 
 li {
-    padding: 14px 18px;
+    padding: 6px 18px 18px;
     border-bottom: 1px solid $menu-select;
     cursor: pointer;
     i {
