--- a/css/style.css
+++ b/css/style.css
@@ -115,20 +115,21 @@ ul {
   margin: 30px 0; }
 
 li {
-  padding: 4px 18px 16px;
+  padding: 14px 18px;
   border-bottom: 1px solid #374953;
   cursor: pointer; }
   li i {
-    position: relative;
-    top: 6px;
-    right: 2px;
-    color: #626d82; }
+    padding-right: 6px;
+    color: #626d82;
+    width: 30px;
+    text-align: center; }
   li:hover {
     background-color: #374953; }
     li:hover i {
       color: #f2f2f2; }
 
 .active {
+  padding-left: 12px;
   background-color: #374953;
   border-left: 5px solid #67bf95; }
   .active i {
@@ -186,19 +187,20 @@ input:checked + .slider:before {
 .btn {
   border: none;
   background: none;
-  margin: 6px;
+  margin: 0 .25em 0 0;
+  line-height: 1em;
   color: #0b0b0b;
   font-size: 1rem;
-  border-radius: 6px;
-  padding: 0.6em 1em;
+  font-weight: 700;
+  border-radius: .28571429rem;
+  padding: .78571429em 1.5em .78571429em;
   transition: all 0.2s ease; }
   .btn:active {
     transform: scale(0.98); }
 
 .btn-outline {
   color: #67bf95;
-  border: 2px solid #0b0b0b;
-  padding: 0.52em 1.1em; }
+  border: 2px solid #67bf95; }
   .btn-outline:hover {
     background-color: #67bf95;
     color: #f2f2f2; }
