--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -38,14 +38,14 @@ ul {
 }
 
 li {
-    padding: 4px 18px 16px;
+    padding: 14px 18px;
     border-bottom: 1px solid $menu-select;
     cursor: pointer;
     i {
-        position: relative;
-        top: 6px;
-        right: 2px;
+        padding-right: 6px;
         color: $menu-icon;
+        width: 30px;
+        text-align: center;
     }
     &:hover {
         background-color: $menu-select;
@@ -54,6 +54,7 @@ li {
 }
 
 .active {
+    padding-left: 12px;
     background-color: $menu-select;
     border-left: 5px solid $brand;
     i {color: $white}
