--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,17 +10,18 @@
 @import "menu";
 @import "toggle";
 @import "buttons";
+@import "cards";
 
 main {
     height: 100vh;
     width: 100vw;
     background-color: $back;
-    padding: 60px 30px;
+    padding: 30px 30px;
 }
 
 article {
     max-width: 760px;
-    margin: 0 auto;
+    margin: 30px auto;
     padding: 30px;
     background-color: $white;
     border: 1px solid $border;
