--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -21,10 +21,11 @@
     width:  200px;
     height: 250px;
     position: absolute;
-    border-radius: 4px;
+    border-radius: 2px;
     border:   1px solid $border;
     background-color:   white;
     backface-visibility: hidden;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.1), 0 3px 6px rgba(0,0,0,0.17);
 }
 
 .back {transform: rotateY(180deg)}
