--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -6,7 +6,7 @@
 
 
 *, h1, h2, h3, h4, h5, h6, p, a, small {
-    font-family: 'helvetica neue', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-weight: 400;
 }
 
