--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,12 +11,12 @@
 @import "toggle";
 @import "buttons";
 @import "cards";
+@import "header";
 
 main {
-    height: 100vh;
     width: 100vw;
+    height: 100%;
     background-color: $back;
-    padding: 30px 30px;
 }
 
 article {
