header scss tidy

--- a/css/style.css
+++ b/css/style.css
@@ -261,24 +261,24 @@ input:checked + .slider:before {
 header {
   height: 600px;
   position: relative;
-  background-image: url("../images/hero-image.jpg");
+  overflow: hidden;
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  overflow: hidden; }
+  background-image: url("../images/hero-image.jpg"); }
   header h1 {
-    text-align: center;
     width: 400px;
     height: 136px;
-    padding: 40px 0;
     color: #f2f2f2;
-    border: 4px solid #f2f2f2;
-    position: absolute;
     top: 50%;
     left: 50%;
+    position: absolute;
+    text-align: center;
+    padding: 40px 0;
     margin-left: -200px;
-    margin-top: -68px; }
+    margin-top: -68px;
+    border: 4px solid #f2f2f2; }
 
 main {
   width: 100vw;
