--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,32 +1,32 @@
 
 #open {
     position: fixed;
-    padding: 10px;
+    padding:   10px;
     font-size: 2rem;
-    color: black;
-    z-index: 10;
+    color:  black;
+    z-index:     10;
     cursor: pointer;
     &:hover {opacity: 0.6}
 }
 
 .menu {
     height: 100vh;
-    width: 250px;
+    width:  250px;
+    z-index:   10;
     margin-left: -250px;
+    position:     fixed;
+    overflow:    hidden;
     background-color: $menu-back;
-    position: fixed;
-    overflow: hidden;
-    transition: .4s ease-in-out;
-    z-index: 10;
+    transition: 0.4s ease-in-out;
     h2 {padding: 10px}
 }
 
 #close {
     opacity: 0.8;
-    cursor: pointer;
+    top:    10px;
+    right:  10px;
+    cursor:    pointer;
     position: absolute;
-    top: 10px;
-    right: 10px;
     &:hover {opacity: 1}
 }
 
