--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ input, select {
 a:focus, button:focus {
   outline: none; }
 
+button {
+  cursor: pointer; }
+
 /*=============================================
 =                   Colors                    =
 =============================================*/
@@ -111,14 +114,14 @@ strong {
   margin-left: 0px; }
 
 ul {
-  border-top: 1px solid #374953;
   list-style-type: none;
-  margin: 30px 0; }
+  margin: 30px 0;
+  border-top: 1px solid #374953; }
 
 li {
   padding: 14px 18px;
-  border-bottom: 1px solid #374953;
-  cursor: pointer; }
+  cursor: pointer;
+  border-bottom: 1px solid #374953; }
   li i {
     padding-right: 6px;
     color: #626d82;
@@ -185,13 +188,13 @@ input:checked + .slider:before {
 .btn {
   border: none;
   background: none;
-  margin: 0 .25em 0 0;
   line-height: 1em;
   color: #0b0b0b;
   font-size: 1rem;
-  font-weight: 700;
-  border-radius: .28571429rem;
-  padding: .78571429em 1.5em .78571429em;
+  font-weight: 500;
+  margin: 0 .25em 0 0;
+  border-radius: .28rem;
+  padding: .78em 1.5em .78em;
   transition: all 0.2s ease; }
   .btn:active {
     -webkit-transform: scale(0.98);
@@ -256,6 +259,11 @@ input:checked + .slider:before {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.17); }
   .front h3, .back h3 {
     padding: 10px; }
+  .front p, .back p {
+    text-align: center;
+    width: 100%;
+    position: absolute;
+    bottom: 0; }
 
 .back {
   -webkit-transform: rotateY(180deg);
@@ -283,9 +291,49 @@ header {
     margin-top: -68px;
     border: 14px solid #f2f2f2; }
 
+.modal {
+  position: fixed;
+  z-index: 100; }
+
+.modal-bg {
+  position: inherit;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  z-index: 101;
+  opacity: 0.5;
+  background-color: black; }
+
+.close-button {
+  top: 16px;
+  right: 20px;
+  z-index: 102;
+  position: inherit; }
+
+.modal-main {
+  top: 50%;
+  left: 50%;
+  z-index: 102;
+  width: 600px;
+  height: 400px;
+  padding: 30px;
+  position: inherit;
+  background-color: #f2f2f2;
+  text-align: center;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); }
+
+.hide {
+  display: none; }
+
+#close-modal {
+  cursor: pointer;
+  color: #0b0b0b; }
+
 main {
   width: 100vw;
   height: 100%;
+  padding-bottom: 200px;
   background-color: #e9e9e9; }
 
 article {
@@ -295,5 +343,8 @@ article {
   background-color: #f2f2f2;
   border: 1px solid #d5d5d5;
   border-radius: 4px; }
+
+hr {
+  margin-bottom: 50px; }
 
 /*----------  Break Point 1 - 1200px  ----------*/
