--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -8,21 +8,18 @@
 //--------------------------------
 
 .btn {
-    border: none;
+    border: 	none;
 	background: none;
-	margin: 0 .25em 0 0;
 	line-height: 1em;
-	color: $black;
-	font-size: 1rem;
-	font-weight: 700;
-	border-radius: .28571429rem;
-	padding: .78571429em 1.5em .78571429em;
-	transition: all 0.2s ease;
+	color: 	  $black;
+	font-size: 	1rem;
+	font-weight: 500;
+	margin:   0 .25em 0 0;
+	border-radius: .28rem;
+	padding: .78em 1.5em .78em;
+	transition:  all 0.2s ease;
 	
-	
-	&:active {
-		transform: scale(0.98);
-	}
+	&:active {transform: scale(0.98)}
 }
 
 
