--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -10,18 +10,16 @@
     font-weight: 400;
 }
 
-h1 {
-    font-size: 2.8rem;
-}
+h1 {font-size: 2.8rem}
 
 h2 {
-    font-weight: 200;
-    color: $white;
+    font-weight:  200;
+    color:     $white;
     font-size: 1.4rem;
 }
 
 a {
-    color: $white;
+    color:    $white;
     font-weight: 600;
 }
 
