--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,21 +12,26 @@
 @import "buttons";
 @import "cards";
 @import "header";
+@import "modal";
+
+
 
 main {
     width: 100vw;
     height: 100%;
+    padding-bottom:   200px;
     background-color: $back;
 }
 
 article {
-    max-width: 760px;
+    max-width:  760px;
     margin: 30px auto;
-    padding: 30px;
-    background-color: $white;
+    padding:     30px;
+    background-color:  $white;
     border: 1px solid $border;
-    border-radius: 4px;
+    border-radius:        4px;
 }
 
+hr {margin-bottom: 50px}
 
 @import "media-queries";
