--- a/css/style.css
+++ b/css/style.css
@@ -143,10 +143,10 @@ li {
 
 /* The switch - the box around the slider */
 .switch {
-  position: relative;
-  display: inline-block;
   width: 40px;
-  height: 22px; }
+  height: 22px;
+  position: relative;
+  display: inline-block; }
 
 /* Hide default HTML checkbox */
 .switch input {
@@ -154,22 +154,22 @@ li {
 
 /* The slider */
 .slider {
-  position: absolute;
-  cursor: pointer;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+  position: absolute;
+  cursor: pointer;
   background-color: #ccc;
   transition: .4s; }
 
 .slider:before {
-  position: absolute;
-  content: "";
   height: 17px;
   width: 17px;
   left: 3px;
   bottom: 3px;
+  content: "";
+  position: absolute;
   background-color: white;
   transition: .4s; }
 
