added moving circle

--- a/css/style.css
+++ b/css/style.css
@@ -332,6 +332,18 @@ header {
   cursor: pointer;
   color: #0b0b0b; }
 
+.circle {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  border-radius: 100%;
+  margin: 30px 10px;
+  transition: all .5s ease-in-out; }
+
+.move {
+  -webkit-transform: translate(400px, 0px);
+          transform: translate(400px, 0px); }
+
 main {
   width: 100vw;
   height: 100%;
