--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ table {
 * {
   box-sizing: border-box;
   text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
 a {
