--- a/scss/_normalise.scss
+++ b/scss/_normalise.scss
@@ -39,7 +39,7 @@ table {
 *  {
     box-sizing:              border-box;
     text-rendering:  optimizeLegibility;
-    // -webkit-font-smoothing: antialiased;
+    -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing:  grayscale;
 }
 
